# game

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: map.ldtk  new_map.ldtk
assets/maps/: map.ldtk
src/: animations.rs  ball.rs  brick.rs  bullet.rs  collisions.rs  game.rs  main.cpp  main.rs  menu.rs  paddle.rs  player.rs  slimes.rs  state_handlers.rs  turret.rs  utils.rs
src/animations/: components.rs  legacy.rs  mod.rs
src/client/: animations.rs  camera_follow.rs  client.cpp  client.rs  components.hpp  config.hpp  controls.rs  display_health.rs  main.rs  menu.rs  ssl_client.hpp  systems.cpp  systems.hpp
src/client/animations/: animate.rs  entity_animations.rs  mod.rs
src/client/message_handlers/: despawn_player.rs  health_changed.rs  mod.rs  spawn_player.rs  spawn_slime.rs  update_direction.rs  update_facing.rs  update_position.rs  update_your_id.rs
src/client/resources/: client_resource.hpp
src/client/scenes/: events.hpp  scene_state_machine.hpp  state_machine.hpp
src/common/: BaseSocket.hpp  ClientSocket.hpp  Queue.hpp  ResourceHolder.hpp  ServerSocket.cpp  ServerSocket.hpp  network.cpp  network.hpp  socket.cpp  socket.hpp
src/common/events/: EventLoop.cpp  EventLoop.hpp  client_events.hpp  generic_event.hpp  server_events.hpp
src/common/net/: BaseSocket.hpp  Channel.hpp  ClientSocket.cpp  ClientSocket.hpp  ServerSocket.cpp  ServerSocket.hpp  network.cpp  network.hpp  serialization.hpp
src/common/net/packets/: Type.hpp  move.hpp
src/common/packets/: Type.cpp  Type.hpp  move.hpp
src/common/scenes/: Scene.hpp
src/common/states/: StateMachine.hpp
src/player/: animations.rs  attack.rs  components.rs  controller.rs  controls.rs  events.rs  mod.rs
src/server/: Channel.hpp  main.rs  server.cpp  server.rs  ssl_server.hpp
src/shared/: PlayerBundle.rs  direction.rs  gravity.rs  health.rs  map.rs  messages.rs  mod.rs  player_bundle.rs  server.rs  server_entities.rs  slime_bundle.rs
src/shared/server/: message_events.rs  message_handlers.rs  mod.rs  server.rs
