[package]
name = "game"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
bevy_quinnet = "0.5.0"
futures-lite = "1.13.0"
quinn = "0.10.1"
rcgen = "0.11.1"
rustls = "0.21.5"
tokio = "1.29.1"
