[package]
name = "game"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[lib]
name = "shared"
path = "src/shared/mod.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
benimator = "4.1.3"
bevy = "0.11"
bevy_egui = "0.21.0"
bevy_quinnet = "0.5.0"
bevy_rapier2d = "0.22.0"
ciborium = "0.2.1"
futures-lite = "1.13.0"
leafwing-input-manager = "0.10.0"
log = "0.4.19"
quinn = "0.10.1"
rand = "0.8.5"
rcgen = "0.11.1"
rustls = "0.21.5"
serde = { version = "1.0.171", features = ["derive"] }
tokio = "1.29.1"
